Load command now understands file system paths